--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ body {
     color: white;
     background-color: white;
     border: 1px dashed black;
+    position: absolute;
+    right: 0;
     
 }
 
@@ -35,9 +37,9 @@ body {
     flex-direction: column;
     align-items: center;
     position: absolute;
-    top: 5vh;
-    right: 3vw;
+    left: 0;
     transition: .5s ease-in-out;
+
 }
 
 #bar div {
